Added InformationComponent and edited files.

--- a/Farmview2.0/Farmview2.0.vcxproj.filters
+++ b/Farmview2.0/Farmview2.0.vcxproj.filters
@@ -92,7 +92,7 @@
     <ClInclude Include="src\InventoryComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\ItemComponent.h">
+    <ClInclude Include="src\InformationComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
