Added items and implemented an inventory.

--- a/Farmview2.0/Farmview2.0.vcxproj.filters
+++ b/Farmview2.0/Farmview2.0.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClCompile Include="src\Statblock.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\PlayerCharacter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\PlayerComponent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Game.h">
@@ -104,7 +110,7 @@
     <ClInclude Include="src\InformationComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\DataTypes.h">
+    <ClInclude Include="src\Datatypes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Item.h">
@@ -117,6 +123,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Statblock.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\PlayerComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\PlayerCharacter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
