--- a/Farmview2.0/Farmview2.0.vcxproj
+++ b/Farmview2.0/Farmview2.0.vcxproj
@@ -145,6 +145,8 @@
     <ClCompile Include="src\LoadScreen.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Map.cpp" />
+    <ClCompile Include="src\PlayerCharacter.cpp" />
+    <ClCompile Include="src\PlayerComponent.cpp" />
     <ClCompile Include="src\Pointwell.cpp" />
     <ClCompile Include="src\Statblock.cpp" />
     <ClCompile Include="src\TextureManager.cpp" />
@@ -155,7 +157,7 @@
     <ClInclude Include="src\ColliderComponent.h" />
     <ClInclude Include="src\Collision.h" />
     <ClInclude Include="src\Components.h" />
-    <ClInclude Include="src\DataTypes.h" />
+    <ClInclude Include="src\Datatypes.h" />
     <ClInclude Include="src\ECS.h" />
     <ClInclude Include="src\InformationComponent.h" />
     <ClInclude Include="src\InventoryComponent.h" />
@@ -166,6 +168,8 @@
     <ClInclude Include="src\Map.h" />
     <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\GameObject.h" />
+    <ClInclude Include="src\PlayerCharacter.h" />
+    <ClInclude Include="src\PlayerComponent.h" />
     <ClInclude Include="src\Pointwell.h" />
     <ClInclude Include="src\Statblock.h" />
     <ClInclude Include="src\TileComponent.h" />
