Create Inventory rendered image. Ability to click and seeds rendered on screen.

--- a/Farmview2.0/Farmview2.0.vcxproj.filters
+++ b/Farmview2.0/Farmview2.0.vcxproj.filters
@@ -125,5 +125,8 @@
     <ClInclude Include="src\PlayerCharacter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Menu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
