--- a/Farmview2.0/Farmview2.0.vcxproj
+++ b/Farmview2.0/Farmview2.0.vcxproj
@@ -71,12 +71,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Users\Yone%27se\CppProjects\SDL2\include;C:\Users\Yone%27se\CppProjects\SDL2_image\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Yone%27se\CppProjects\SDL2\lib\x64;C:\Users\Yone%27se\CppProjects\SDL2_image\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Yone%27se\CppProjects\SDL2\include;C:\Users\Yone%27se\CppProjects\SDL2_image\include;C:\Users\Yone%27se\CppProjects\SDL2_ttf\include;C:\Users\Yone%27se\CppProjects\SDL2_mixer\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Yone%27se\CppProjects\SDL2\lib\x64;C:\Users\Yone%27se\CppProjects\SDL2_image\lib\x64;C:\Users\Yone%27se\CppProjects\SDL2_ttf\lib\x64;C:\Users\Yone%27se\CppProjects\SDL2_mixer\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>C:\Users\Yone%27se\CppProjects\SDL2\include;C:\Users\Yone%27se\CppProjects\SDL2_image\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Yone%27se\CppProjects\SDL2\lib\x64;C:\Users\Yone%27se\CppProjects\SDL2_image\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Yone%27se\CppProjects\SDL2\include;C:\Users\Yone%27se\CppProjects\SDL2_image\include;C:\Users\Yone%27se\CppProjects\SDL2_ttf\include;C:\Users\Yone%27se\CppProjects\SDL2_mixer\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Yone%27se\CppProjects\SDL2\lib\x64;C:\Users\Yone%27se\CppProjects\SDL2_image\lib\x64;C:\Users\Yone%27se\CppProjects\SDL2_ttf\lib\x64;C:\Users\Yone%27se\CppProjects\SDL2_mixer\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -116,7 +116,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -133,7 +133,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -166,6 +166,7 @@
     <ClInclude Include="src\Map.h" />
     <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\GameObject.h" />
+    <ClInclude Include="src\Menu.h" />
     <ClInclude Include="src\PlayerCharacter.h" />
     <ClInclude Include="src\PlayerComponent.h" />
     <ClInclude Include="src\Pointwell.h" />
