Added timer and rendered on screen.

--- a/Farmview2.0/Farmview2.0.vcxproj
+++ b/Farmview2.0/Farmview2.0.vcxproj
@@ -137,6 +137,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Clock.cpp" />
     <ClCompile Include="src\Collision.cpp" />
     <ClCompile Include="src\ECS.cpp" />
     <ClCompile Include="src\Game.cpp" />
@@ -157,6 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Animation.h" />
+    <ClInclude Include="src\Clock.h" />
     <ClInclude Include="src\ColliderComponent.h" />
     <ClInclude Include="src\Collision.h" />
     <ClInclude Include="src\Components.h" />
